--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="youngsuk.jpeg" alt="alt text" width="230px" height="300px" />&nbsp;</td>
-<td align="left"><p><a href="https://aws.amazon.com/ai/">AWS AI Labs</a>, Applied Scientist II.<br />
+<td align="left"><p><a href="https://aws.amazon.com/ai/">Amazon (AWS) AI Labs</a>, Applied Scientist II.<br />
 Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>, <a href="http://www.stanford.edu/">Stanford University</a><br />
 </p>
 <p>Email: youngsuk [at] cs [dot] stanford [dot] edu<br />
@@ -33,7 +33,7 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jun. 2020. I joined AWS AI Labs, Palo Alto, as a scientist for time-series forecasting and reinforcement learning tasks"</p>
+<p>Jun. 2020. Joined Amazon Web Service (AWS) AI Labs, Palo Alto, where I work on time-series forecasting and reinforcement learning research"</p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
@@ -51,6 +51,10 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </li>
 </ul>
 <h2>Experiences</h2>
+<ul>
+<li><p><a href="https://aws.amazon.com/ai/">Amazon (AWS) AI Labs</a>, Applied Scientist II, Jun.2020 &ndash; </p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://research.adobe.com/">Adobe Research</a>, Data Science Research Intern, Summer 2019.
 </p>
@@ -72,7 +76,7 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Candidate, Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2020. (Advisors: <a href="http://www.stanford.edu/~boyd/">Stephen Boyd</a> and <a href="http://www.cs.stanford.edu/~jure/">Jure Leskovec</a>)</p>
+<li><p>Ph.D., Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2020. (Advisors: <a href="http://www.stanford.edu/~boyd/">Stephen Boyd</a> and <a href="http://www.cs.stanford.edu/~jure/">Jure Leskovec</a>)</p>
 </li>
 <li><p>M.S., Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2016.</p>
 </li>
@@ -90,7 +94,7 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-11 21:30:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-12 10:47:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
