--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@ Accepted for <i>International Conference on Machine Learning</i> (ICML).</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="http://www.stanford.edu/~youngsuk/papers/battery_optimization.pdf">Optimal Operation of a Plug-in Hybrid Vehicle with Battery Thermal and Degradation Model.</a> <br />
+<li><p><a href="papers/battery_optimization.pdf">Optimal Operation of a Plug-in Hybrid Vehicle with Battery Thermal and Degradation Model.</a> <br />
 J. Kim, <b>Y. Park</b>, J. Fox, S. Boyd, and W. Dally. <br />
 To appear in <i>Proceedings of the American Control Conference (ACC)</i>, 2020.<br /></p>
 </li>
@@ -96,7 +96,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-12 10:47:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-30 14:59:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
