--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@ To appear in <i>Proceedings of the American Control Conference (ACC)</i>, 2020.<
 </li>
 </ul>
 <ul>
-<li><p><a href="http://www.stanford.edu/~youngsuk/papers/LQRcloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
+<li><p><a href="papers/LQRcloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
 <b>Y. Park</b>, K. Mahadik, R. Rossi, G. Wu, and H. Zhao. <br />
 <i>Proceedings of ACM Symposium on Cloud Computing (SoCC)</i>, 2019.</p>
 </li>
@@ -96,7 +96,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-30 14:59:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-30 15:02:01 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
