--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@ To appear in <i>Proceedings of the American Control Conference (ACC)</i>, 2020.<
 <ul>
 <li><p>Convergent Actor-Critic under Off-policy and Function Approximation. <br />
 H. Maei and <b>Y. Park</b> <br />
-[<a href="http://www.stanford.edu/~youngsuk/papers/gac_poster.pdf">Slides</a>].</p>
+[<a href="papers/gac_poster.pdf">Slides</a>].</p>
 </li>
 </ul>
 <p><b>Convex Optimization</b></p>
@@ -53,7 +53,7 @@ H. Maei and <b>Y. Park</b> <br />
 <li><p><a href="https://arxiv.org/abs/1910.07056">Variable Metric Proximal Gradient Method with Diagonal Barzilai-Borwein Stepsize.</a> <br />
 <b>Y. Park</b>, S. Dhar, S. Boyd, and M. Shah. <br />
 <i>Proceedings of International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2020. <br /> 
-[<a href="https://arxiv.org/abs/1910.07056">Arxiv (long version)</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
+[<a href="https://arxiv.org/abs/1910.07056">Arxiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
 </li>
 </ul>
 <ul>
@@ -71,7 +71,7 @@ In preparation.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="http://www.stanford.edu/~youngsuk/papers/TVGL.pdf">Network Inference via the Time-Varying Graphical Lasso.</a><br /> 
+<li><p><a href="papers/TVGL.pdf">Network Inference via the Time-Varying Graphical Lasso.</a><br /> 
 D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 <i>Proceedings of ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)</i>, 2017 <br />
 [<a href="https://github.com/davidhallac/TVGL">Code</a>]</p>
@@ -81,22 +81,22 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 <li><p><a href="http://stanford.edu/~boyd/papers/pairwise_exp_struct.html">Learning the Network Structure of Heterogeneous Data via Pairwise Exponential Markov Random Fields.</a> <br />
 <b>Y. Park</b>, D. Hallac, S. Boyd, and J. Leskovec. <br />
 <i>Proceedings of International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2017 <br />
-[<a href="http://www.stanford.edu/~youngsuk/papers/AISTATS_PE-MRFs_Proof.pdf">Supplementary Material</a>], [<a href="https://github.com/youngsuk0723/PE-MRF-Code">Code</a>]
+[<a href="papers/AISTATS_PE-MRFs_Proof.pdf">Supplementary Material</a>], [<a href="https://github.com/youngsuk0723/PE-MRF-Code">Code</a>]
 </p>
 </li>
 </ul>
 <p><b>Other Topics</b></p>
 <ul>
-<li><p>Universal Loseless Compression: Context Tree Weighting. [<a href="http://www.stanford.edu/~youngsuk/papers/slide_universal_compression.pdf">Slides</a>]</p>
+<li><p>Universal Loseless Compression: Context Tree Weighting. [<a href="papers/slide_universal_compression.pdf">Slides</a>]</p>
 </li>
-<li><p>Hypercontractivity, Maximal Correlation, and Non-cooperative Simulation. [<a href="http://www.stanford.edu/~youngsuk/papers/slide_measure_correlation.pdf">Slides</a>, <a href="http://www.stanford.edu/~youngsuk/papers/report_measure_correlation.pdf">Report</a>]</p>
+<li><p>Hypercontractivity, Maximal Correlation, and Non-cooperative Simulation. [<a href="papers/slide_measure_correlation.pdf">Slides</a>, <a href="papers/report_measure_correlation.pdf">Report</a>]</p>
 </li>
-<li><p>Successive Lossy Compression for Laplacian Source. [<a href="http://www.stanford.edu/~youngsuk/papers/slide_lossycompression.pdf">Slides</a>, <a href="http://www.stanford.edu/~youngsuk/papers/report_lossycompression.pdf">Report</a>]</p>
+<li><p>Successive Lossy Compression for Laplacian Source. [<a href="papers/slide_lossycompression.pdf">Slides</a>, <a href="papers/report_lossycompression.pdf">Report</a>]</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-30 15:02:01 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-30 15:05:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
