--- a/resume.html
+++ b/resume.html
@@ -22,10 +22,10 @@
 <div id="toptitle">
 <h1>CV</h1>
 </div>
-<p><a href="http://www.stanford.edu/~youngsuk/ypark_cv.pdf">CV/Resume.</a></p>
+<p><a href="ypark_cv.pdf">CV/Resume.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-30 15:05:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-30 15:08:28 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
