--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jun. 2020. I joined AWS AI Labs, Palo Alto, as a scientist for time-series forecasting and reinforcement learning tasks"</p>
+<p>Jun. 2020. I joined Amazon Web Service (AWS) AI Labs, as a scientist for time-series forecasting and reliable decision making"</p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
@@ -51,6 +51,10 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </li>
 </ul>
 <h2>Experiences</h2>
+<ul>
+<li><p><a href="https://aws.amazon.com/ai/">Amazon Web Service (AWS) AI Labs</a>, Applied Scientist II, Jun. 2020&ndash; Present. </p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://research.adobe.com/">Adobe Research</a>, Data Science Research Intern, Summer 2019.
 </p>
@@ -90,7 +94,7 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-30 16:44:28 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-06-30 17:15:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
