--- a/research.html
+++ b/research.html
@@ -25,9 +25,10 @@
 <h2>Sorted by Topics</h2>
 <p><b>Reinforcement Learning and Optimal Control</b></p>
 <ul>
-<li><p>Structured Policy Iteration for Linear Quadratic Regulator. <br />
-<b>Y. Park</b> et al.<br />
-Accepted for <i>International Conference on Machine Learning</i> (ICML).</p>
+<li><p><a href="papers/spi_lqr.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
+<b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
+<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.
+[<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>]</p>
 </li>
 </ul>
 <ul>
@@ -45,7 +46,7 @@ To appear in <i>Proceedings of the American Control Conference (ACC)</i>, 2020.<
 <ul>
 <li><p>Convergent Actor-Critic under Off-policy and Function Approximation. <br />
 H. Maei and <b>Y. Park</b> <br />
-[<a href="papers/gac_poster.pdf">Slides</a>].</p>
+[<a href="papers/gac_poster.pdf">Slide</a>].</p>
 </li>
 </ul>
 <p><b>Convex Optimization</b></p>
@@ -96,7 +97,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-30 17:15:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-09 09:29:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
