--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 <ul>
 <li><p><a href="papers/spi_lqr.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
-<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.
+<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.<br />
 [<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>]</p>
 </li>
 </ul>
@@ -97,7 +97,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-09 09:29:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-14 10:47:54 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
