--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
 <li><p><a href="papers/spi_lqr.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
 <i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.<br />
-[<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>]</p>
+[<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>], <a href="https://arxiv.org/abs/2007.06202">arXiv</a></p>
 </li>
 </ul>
 <ul>
@@ -54,14 +54,14 @@ H. Maei and <b>Y. Park</b> <br />
 <li><p><a href="https://arxiv.org/abs/1910.07056">Variable Metric Proximal Gradient Method with Diagonal Barzilai-Borwein Stepsize.</a> <br />
 <b>Y. Park</b>, S. Dhar, S. Boyd, and M. Shah. <br />
 <i>Proceedings of International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2020. <br /> 
-[<a href="https://arxiv.org/abs/1910.07056">Arxiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
+[<a href="https://arxiv.org/abs/1910.07056">arXiv (long version)</a>], [<a href="papers/vmpg_icassp.pdf">ICASSP</a>], [<a href="http://www.stanford.edu/~youngsuk/papers/nips_vmpg.pdf">NeurIPS Workshop</a>]</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://link.springer.com/article/10.1007/s11590-019-01520-y">Linear Convergence of Cyclic SAGA.</a> <br />
 <b>Y. Park</b> and E. K. Ryu. <br />
 <i>Optimization Letter</i>, 2020. <br />
-[<a href="https://arxiv.org/abs/1810.11167">Arxiv</a>]</p>
+[<a href="https://arxiv.org/abs/1810.11167">arXiv</a>]</p>
 </li>
 </ul>
 <p><b>Machine Learning</b> </p>
@@ -97,7 +97,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-14 10:47:54 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-14 10:52:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
