--- a/research.html
+++ b/research.html
@@ -28,13 +28,13 @@
 <li><p><a href="papers/spi_lqr.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
 <i>Proceedings of International Conference on Machine Learning</i> (ICML), 2020.<br />
-[<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>], <a href="https://arxiv.org/abs/2007.06202">arXiv</a></p>
+[<a href="papers/spi_lqr_slide.pdf">Slide</a>], [<a href="papers/spi_lqr_supp.pdf">Supplementary materials</a>], [<a href="https://arxiv.org/abs/2007.06202">arXiv</a>]</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="papers/battery_optimization.pdf">Optimal Operation of a Plug-in Hybrid Vehicle with Battery Thermal and Degradation Model.</a> <br />
+<li><p><a href="papers/hybrid_vehicel_battary_control.pdf">Optimal Operation of a Plug-in Hybrid Vehicle with Battery Thermal and Degradation Model.</a> <br />
 J. Kim, <b>Y. Park</b>, J. Fox, S. Boyd, and W. Dally. <br />
-To appear in <i>Proceedings of the American Control Conference (ACC)</i>, 2020.<br /></p>
+<i>Proceedings of the American Control Conference (ACC)</i>, 2020.<br /></p>
 </li>
 </ul>
 <ul>
@@ -97,7 +97,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-14 10:52:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-07-14 10:56:49 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
