create internship page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
+<div class="menu-item"><a href="research_by_year.html">Research</a></div>
+<div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
@@ -23,21 +25,22 @@
 <h1>Youngsuk Park</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="youngsuk.jpeg" alt="alt text" width="230px" height="300px" />&nbsp;</td>
-<td align="left"><p><a href="https://aws.amazon.com/ai/">AWS AI Labs</a>, Applied Scientist II.<br />
-Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>, <a href="http://www.stanford.edu/">Stanford University</a><br />
-</p>
-<p>Email: youngsuk [at] cs [dot] stanford [dot] edu<br />
+<img src="youngsuk.jpeg" alt="alt text" width="200px" height="250px" />&nbsp;</td>
+<td align="left"><p>Youngsuk Park<br />
+Applied Scientist II, <a href="https://aws.amazon.com/ai/">AWS AI Labs</a><br />
+Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a><br /> 
+<a href="http://www.stanford.edu/">Stanford University</a><br />
 </p>
 </td></tr></table>
+<h2>Contact</h2>
+<p>Office: 2100 University Ave, East Palo Alto, CA 94303<br />
+Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or <a href="mailto:pyoungsu@amazon.com">pyoungsu@amazon.com</a><br />
+<a href="https://www.linkedin.com/in/y-park/">Linkedin Profile</a>
+</p>
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jun. 2020. I joined Amazon Web Service (AWS) AI Labs, as a scientist for time-series forecasting and reliable decision making"</p>
-</div></div>
-<div class="infoblock">
-<div class="blockcontent">
-<p>Jun. 2020. Our paper &ldquo;Structured Policy Iteration for Linear Quadratic Regulator&rdquo; was accepted to <i>ICML</i>.</p>
+<p>Dec. 2020. See <a href="https://youngsuk0723.github.io/internship.html">internship opportunities</a> for motivated phd candidates across time-series forecasting, optimization, causal inference, and reinforcement learning. "</p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -83,18 +86,9 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 <li><p>B.S., Electrical Engineering, Minor in Mathematics, <a href="https://ee.kaist.ac.kr/?language=en">Korea Advanced Institute of Science and Technology</a>, 2013.</p>
 </li>
 </ul>
-<h2>Honor</h2>
-<ul>
-<li><p>Hyundai Global Forum, 1st-rank Presenter in AI Session, 2018.</p>
-</li>
-<li><p>Kwanjeong Graduate Fellowship, 2013&ndash;2015.</p>
-</li>
-<li><p>Fulbright Fellowship (Declined).</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-14 10:47:54 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
