--- a/misc.html
+++ b/misc.html
@@ -13,15 +13,17 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
+<div class="menu-item"><a href="research_by_year.html">Research</a></div>
+<div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html" class="current">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-14 10:47:54 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
