--- a/research_by_topic.html
+++ b/research_by_topic.html
@@ -13,9 +13,11 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html" class="current">Research</a></div>
+<div class="menu-item"><a href="research_by_year.html">Research</a></div>
+<div class="menu-item"><a href="research_by_topic.html" class="current">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
@@ -38,7 +40,7 @@ In preparation to submit in <i>International Conference on Machine Learning (ICM
 </ul>
 <ul>
 <li><p>Variance Reduced SGD via Grouping for Time-series Forecasting.<br />
-Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.
+Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
 In preparation to submit in <i>International Conference on Machine Learning (ICML)</i>.</p>
 </li>
 </ul>
@@ -116,7 +118,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 14:54:55 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
