--- a/research_by_year.html
+++ b/research_by_year.html
@@ -13,17 +13,18 @@
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html" class="current">Research</a></div>
+<div class="menu-item"><a href="research_by_year.html" class="current">Research</a></div>
+<div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>Sorted by Topics</h2>
-<p><b>Time-series Forecasting</b></p>
+<h2>Sorted by Year</h2>
 <ul>
 <li><p>Learning the Quantile Function without Quantile Crossing: Regret Analysis and Forecasting Applications.<br /> 
 <b>Y. Park</b>, Y. Wang, D, Robinson.<br />
@@ -38,11 +39,10 @@ In preparation to submit in <i>International Conference on Machine Learning (ICM
 </ul>
 <ul>
 <li><p>Variance Reduced SGD via Grouping for Time-series Forecasting.<br />
-Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.
+Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
 In preparation to submit in <i>International Conference on Machine Learning (ICML)</i>.</p>
 </li>
 </ul>
-<p><b>Reinforcement Learning and Optimal Control</b></p>
 <ul>
 <li><p><a href="http://proceedings.mlr.press/v119/park20c/park20c.pdf">Structured Policy Iteration for Linear Quadratic Regulator.</a> <br />
 <b>Y. Park</b>, Z. Wen, R. Rossi, G. Wu, H. Zhao.<br />
@@ -57,19 +57,6 @@ J. Kim, <b>Y. Park</b>, J. Fox, S. Boyd, and W. Dally. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="papers/LQR_Cloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
-<b>Y. Park</b>, K. Mahadik, R. Rossi, G. Wu, and H. Zhao. <br />
-<i>Proceedings of ACM Symposium on Cloud Computing (SoCC)</i>, 2019. </p>
-</li>
-</ul>
-<ul>
-<li><p>Convergent Actor-Critic under Off-policy and Function Approximation. <br />
-H. Maei and <b>Y. Park</b> <br />
-[<a href="papers/gac_poster.pdf">Slide</a>].</p>
-</li>
-</ul>
-<p><b>Convex Optimization</b></p>
-<ul>
 <li><p><a href="https://arxiv.org/abs/1910.07056">Variable Metric Proximal Gradient Method with Diagonal Barzilai-Borwein Stepsize.</a> <br />
 <b>Y. Park</b>, S. Dhar, S. Boyd, and M. Shah. <br />
 <i>Proceedings of International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2020. <br /> 
@@ -83,11 +70,10 @@ H. Maei and <b>Y. Park</b> <br />
 [<a href="https://arxiv.org/abs/1810.11167">arXiv</a>]</p>
 </li>
 </ul>
-<p><b>Machine Learning</b> </p>
 <ul>
-<li><p>Structured Neural Inference for Undirected Graphical Model from Heterogeneous Data.  <br />
-<b>Y. Park</b> et al. <br />
-In preparation.</p>
+<li><p><a href="papers/LQR_Cloud.pdf">Linear Quadratic Regulator for Resource-Efficient Cloud Services.</a> <br />
+<b>Y. Park</b>, K. Mahadik, R. Rossi, G. Wu, and H. Zhao. <br />
+<i>Proceedings of ACM Symposium on Cloud Computing (SoCC)</i>, 2019. </p>
 </li>
 </ul>
 <ul>
@@ -105,8 +91,12 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </p>
 </li>
 </ul>
-<p><b>Other Topics</b></p>
+<p><b>Others</b></p>
 <ul>
+<li><p>Convergent Actor-Critic under Off-policy and Function Approximation. 
+H. Maei and <b>Y. Park</b>, 
+[<a href="papers/gac_poster.pdf">Slide</a>].</p>
+</li>
 <li><p>Universal Loseless Compression: Context Tree Weighting. [<a href="papers/slide_universal_compression.pdf">Slides</a>]</p>
 </li>
 <li><p>Hypercontractivity, Maximal Correlation, and Non-cooperative Simulation. [<a href="papers/slide_measure_correlation.pdf">Slides</a>, <a href="papers/report_measure_correlation.pdf">Report</a>]</p>
@@ -116,7 +106,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 14:54:55 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
