--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </li>
 </ul>
 <ul>
-<li><p><a href="http://web.stanford.edu/class/ee364b/">Convex Optimization II</a>, Teaching Assistance, Spring 2015.</p>
+<li><p><a href="http://web.stanford.edu/class/ee364b/">Convex Optimization II</a>, Teaching Assistant, Spring 2015.</p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -88,7 +88,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
