--- a/internship.html
+++ b/internship.html
@@ -24,11 +24,11 @@
 <div id="toptitle">
 <h1>Internship Opportunities</h1>
 </div>
-<h2>To PhD candidate for potential internship.</h2>
-<p>We, time-series forecast science team at AWS AI Labs, are looking for motivated research interns for coming summer 2021.</p>
+<h2>To PhD candidates for potential internships.</h2>
+<p>We, time-series forecast science team at AWS AI Labs, are looking for motivated research interns in this coming summer 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 15:48:16 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
