update internship page

--- a/internship.html
+++ b/internship.html
@@ -24,11 +24,38 @@
 <div id="toptitle">
 <h1>Internship Opportunities</h1>
 </div>
-<h2>To PhD candidates for potential internships.</h2>
-<p>We, time-series forecast science team at AWS AI Labs, are looking for motivated research interns in this coming summer 2021.</p>
+<h2>About internship</h2>
+<p><i>Forecast science</i> team at AWS AI Labs, are looking for motivated research interns in coming summer 2021. The internship is minimum 12 weeks and requires PhD candidacy in relevant areas. Regarding to general info of our team, please refer to <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, <a href="https://github.com/awslabs/gluon-ts">GluonTS repo</a>, <a href="https://aws.amazon.com/forecast/">AWS AI page</a>. The main goal of this internship is to develop scalable and reliable time-series forecasting tasks, reflecting various topics possibly across machine learning, statistics, and optimization, along with an artifact of  publications in venues of top-tier conferences or journals. </p>
+<h2>Ideal candidates </h2>
+<p>have a strong background on one or more of the following areas</p>
+<ul>
+<li><p>Seq2Seq deep learning models</p>
+</li>
+<li><p>generative model (GAN, VAE, normalizing flow)</p>
+</li>
+<li><p>autoML (meta learning, transfer learning, domain adaptation)</p>
+</li>
+<li><p>reinforcement learning (off-policy)</p>
+</li>
+<li><p>time-series forecasting and anomaly detection</p>
+</li>
+<li><p>other theoretical topics, e.g., fairness, explainability, distribution shift, model misspecification</p>
+</li>
+</ul>
+<p>have strong at least one publication </p>
+<ul>
+<li><p>in top-tier AI conferences, e.g. ICML, NeurIPS, AISTATS, ICLR, KDD </p>
+</li>
+<li><p>preferably as a first author</p>
+</li>
+</ul>
+<h2>Applications</h2>
+<p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding our team and positions. </p>
+<h2>Beyond forecast science</h2>
+<p>Feel free to email to me, even if you have general inquiries on internship at AWS AI beyond the forecast science team. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 16:20:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
