update internship page

--- a/internship.html
+++ b/internship.html
@@ -50,12 +50,10 @@
 </li>
 </ul>
 <h2>Applications</h2>
-<p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding our team and positions. </p>
-<h2>Beyond forecast science</h2>
-<p>Feel free to email to me, even if you have general inquiries on internship at AWS AI beyond the forecast science team. </p>
+<p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding my team and positions (or even beyond my team). </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-03 16:20:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 16:23:23 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
