update internship page

--- a/internship.html
+++ b/internship.html
@@ -12,12 +12,12 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Youngsuk Park</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research_by_year.html">Research</a></div>
 <div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
-<div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
+<div class="menu-item"><a href="internship.html" class="current">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
 <td id="layout-content">
@@ -53,7 +53,7 @@
 <p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding my team and positions (or even beyond my team). </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-03 16:27:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 16:29:28 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
