update internship doc

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="research_by_year.html">Research</a></div>
 <div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
-<div class="menu-item"><a href="resume.html">CV/Resume</a></div>
+<div class="menu-item"><a href="resume.html" class="current">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
 <div class="menu-item"><a href="misc.html">Misc</a></div>
 </td>
@@ -27,7 +27,7 @@
 <p><a href="ypark_cv.pdf">CV/Resume.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 16:32:59 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
