--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Dec. 2020. See <a href="https://youngsuk0723.github.io/internship.html">internship opportunities</a> for motivated phd candidates across time-series forecasting, optimization, causal inference, and reinforcement learning. "</p>
+<p>Dec. 2020. See <a href="https://youngsuk0723.github.io/internship.html">internship opportunities</a> for highly motivated phd candidates in machine learning areas."</p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -88,7 +88,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-03 16:32:59 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
