--- a/internship.html
+++ b/internship.html
@@ -25,7 +25,7 @@
 <h1>Internship Opportunities</h1>
 </div>
 <h2>About internship</h2>
-<p><i>Forecast science</i> team at AWS AI Labs, is looking for motivated research interns coming summer 2021. The internship is minimum 12 weeks and requires PhD candidacy in relevant areas. Regarding to general info of our team, please refer to <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, <a href="https://github.com/awslabs/gluon-ts">GluonTS repo</a>, <a href="https://aws.amazon.com/forecast/">AWS AI page</a>. The main goal of this internship is to develop scalable and reliable time-series forecasting tasks, reflecting various topics possibly across machine learning, statistics, and optimization, along with some publication artifacts in venues of top-tier conferences or journals. </p>
+<p><i>Forecast science</i> team at AWS AI Labs is looking for motivated research interns coming summer 2021. The internship is minimum 12 weeks and requires PhD candidacy in relevant areas. Regarding to general info of our team, please refer to <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, <a href="https://github.com/awslabs/gluon-ts">GluonTS repo</a>, <a href="https://aws.amazon.com/forecast/">AWS AI page</a>. The main goal of this internship is to develop scalable and reliable time-series forecasting tasks, reflecting various topics possibly across machine learning, statistics, and optimization, along with some publication artifacts in venues of top-tier conferences or journals. </p>
 <h2>Ideal candidates </h2>
 <p>have a strong background in machine learning of one or more of the following areas, but not limited to,</p>
 <ul>
@@ -55,7 +55,7 @@
 <p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding my team and positions (or even beyond my team). </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-04 05:06:02 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-04 05:09:22 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
