--- a/internship.html
+++ b/internship.html
@@ -25,9 +25,11 @@
 <h1>Internship Opportunities</h1>
 </div>
 <h2>About internship</h2>
-<p><i>Forecast science</i> team at AWS AI Labs is looking for motivated research interns coming summer 2021. The internship is minimum 12 weeks and requires PhD candidacy in relevant areas. Regarding to general info of our team, please refer to <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, <a href="https://github.com/awslabs/gluon-ts">GluonTS repo</a>, <a href="https://aws.amazon.com/forecast/">AWS AI page</a>. The main goal of this internship is to develop scalable and reliable time-series forecasting tasks, reflecting various topics possibly across machine learning, statistics, and optimization, along with some publication artifacts in venues of top-tier conferences or journals. </p>
+<p><i>Forecast science</i> team is looking for motivated research interns coming summer 2021. The internship is minimum 12 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time-series forecasting methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences or journals at the end of internship. </p>
+<h2>About Amazon Forecast science team</h2>
+<p>Regarding to our team, please refer to  <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, <a href="https://github.com/awslabs/gluon-ts">GluonTS repo</a>, and <a href="https://aws.amazon.com/forecast/">Amazon Forecast</a>. </p>
 <h2>Ideal candidates </h2>
-<p>have a strong background in machine learning of one or more of the following areas, but not limited to,</p>
+<p>have a strong background in  one or more of the following machine learning areas, but not limited to,</p>
 <ul>
 <li><p>Seq2Seq deep learning models</p>
 </li>
@@ -35,27 +37,25 @@
 </li>
 <li><p>autoML (meta learning, transfer learning, domain adaptation)</p>
 </li>
-<li><p>reinforcement learning (off-policy)</p>
-</li>
 <li><p>time-series forecasting and anomaly detection</p>
 </li>
-<li><p>stochastic process, Neural process</p>
+<li><p>stochastic process, Neural process, Neural ODE</p>
 </li>
-<li><p>other theoretical topics, e.g., fairness, explainability, distribution shift, model misspecification</p>
+<li><p>reinforcement learning (off-policy)</p>
+</li>
+<li><p>other theoretical topics, e.g., fairness, explainability, distribution shift, conformal inference, causal inference.</p>
 </li>
 </ul>
-<p>have at least one publication </p>
+<p>and preferably have at least one publication </p>
 <ul>
 <li><p>in top-tier AI conferences, e.g. ICML, NeurIPS, AISTATS, ICLR, KDD </p>
 </li>
-<li><p>preferably as a first author</p>
-</li>
 </ul>
 <h2>Applications</h2>
-<p>You can formally apply <a href="https://awsailabs.splashthat.com/">here</a>. Feel free to make inquiries to me regarding my team and positions (or even beyond my team). </p>
+<p>If you are interested, feel free to send  <a href="mailto:pyoungsu@amazon.com">pyoungsu@amazon.com</a> an email attached with your C.V. and short introduction.  </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-04 05:09:22 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-12-04 14:28:40 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
