--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <table class="imgtable"><tr><td>
 <img src="youngsuk.jpeg" alt="alt text" width="200px" height="250px" />&nbsp;</td>
 <td align="left"><p>Youngsuk Park<br />
-Applied Scientist II, <a href="https://aws.amazon.com/ai/">AWS AI Labs</a><br />
+Machine Learning Scientist, <a href="https://aws.amazon.com/ai/">AWS AI Labs</a><br />
 Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a><br /> 
 <a href="http://www.stanford.edu/">Stanford University</a><br />
 </p>
@@ -38,6 +38,10 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 <a href="https://www.linkedin.com/in/y-park/">Linkedin Profile</a>
 </p>
 <h2>News</h2>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Mar. 2021. Two papers on domain adaptation and variance reduced training have been uploaded to ArXiv.</p>
+</div></div>
 <div class="infoblock">
 <div class="blockcontent">
 <p>Dec. 2020. See <a href="https://youngsuk0723.github.io/internship.html">internship opportunities</a> for motivated phd candidates across time-series forecasting, optimization, causal inference, and reinforcement learning. "</p>
@@ -79,7 +83,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Candidate, Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2020. (Advisors: <a href="http://www.stanford.edu/~boyd/">Stephen Boyd</a> and <a href="http://www.cs.stanford.edu/~jure/">Jure Leskovec</a>)</p>
+<li><p>Ph.D., Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2020. (Advisors: <a href="http://www.stanford.edu/~boyd/">Stephen Boyd</a> and <a href="http://www.cs.stanford.edu/~jure/">Jure Leskovec</a>)</p>
 </li>
 <li><p>M.S., Electrical Engineering, <a href="http://www.stanford.edu/">Stanford University</a>, 2016.</p>
 </li>
@@ -88,7 +92,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-05 08:38:21 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
