--- a/research_by_topic.html
+++ b/research_by_topic.html
@@ -28,20 +28,22 @@
 <p><b>Time-series Forecasting</b></p>
 <ul>
 <li><p>Learning the Quantile Function without Quantile Crossing: Regret Analysis and Forecasting Applications.<br /> 
-<b>Y. Park</b>, Y. Wang, D, Robinson.<br />
-In preparation to submit in <i>International Conference on Machine Learning (ICML)</i>.</p>
+<b>Y. Park</b> et al.<br />
+In preparation.</p>
 </li>
 </ul>
 <ul>
-<li><p>Domain Adaption for Deep Time-series Forecasting.<br /> 
+<li><p><a href="https://arxiv.org/abs/2102.06828">Attention-based Domain Adaption for Time Series Forecasting.</a><br /> 
 X. Jin, <b>Y. Park</b>, D, Robinson, Y. Wang.<br />
-In preparation to submit in <i>International Conference on Machine Learning (ICML)</i>.</p>
+Under review. 
+</p>
 </li>
 </ul>
 <ul>
-<li><p>Variance Reduced SGD via Grouping for Time-series Forecasting.<br />
+<li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduction in Training Forecasting Models with Subgroup Sampling</a><br />
 Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
-In preparation to submit in <i>International Conference on Machine Learning (ICML)</i>.</p>
+Under review. 
+</p>
 </li>
 </ul>
 <p><b>Reinforcement Learning and Optimal Control</b></p>
@@ -118,7 +120,7 @@ D. Hallac, <b>Y. Park</b>, S. Boyd, and J. Leskovec. <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-02 16:11:46 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-05 08:38:21 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
