--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <h2>Experiences</h2>
 <ul>
-<li><p><a href="https://aws.amazon.com/ai/">Amazon Web Service (AWS) AI Labs</a>, Applied Scientist II, Jun. 2020&ndash; Present. </p>
+<li><p><a href="https://aws.amazon.com/ai/">Amazon Web Service (AWS) AI Labs</a>, Machine Learning Scientist, Jun. 2020&ndash; Present. </p>
 </li>
 </ul>
 <ul>
@@ -92,7 +92,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-05 08:51:03 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-03-29 08:58:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
