--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Mar. 2021. Two papers on domain adaptation and variance reduced training have been uploaded to ArXiv.</p>
+<p>July. 2021. The paper on learning quantile function without quantile crossing appears <a href="https://sites.google.com/berkeley.edu/dfuq21/">Distribution-free Uncertainty Quantification</a> ICML workshop. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Dec. 2020. See <a href="https://youngsuk0723.github.io/internship.html">internship opportunities</a> for motivated phd candidates across time-series forecasting, optimization, causal inference, and reinforcement learning. "</p>
+<p>July. 2021. The paper on variance reduced SGD with stratified sampling appears in ICML 2021. </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>May. 2021. The paper on domain adaptation for time series forecasting have been uploaded to ArXiv.</p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -52,9 +56,11 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </li>
 <li><p>Optimization</p>
 </li>
+<li><p>Time Series Forecasting</p>
+</li>
 <li><p>Reinforcement Learning and Control</p>
 </li>
-<li><p>Information Theory</p>
+<li><p>Causality, Explainability</p>
 </li>
 </ul>
 <h2>Experiences</h2>
@@ -92,7 +98,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-29 08:58:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
