--- a/misc.html
+++ b/misc.html
@@ -26,9 +26,10 @@
 </div>
 <h2>Review activities</h2>
 <ul>
-<li><p>Journal of Machine Learning Research (JMLR), 
-SIAM Journal on Mathematics of Data Science (SIMODS),  
+<li><p>Journal of Machine Learning Research (JMLR),  
 Neural Information Processing Systems (NeurIPS),  
+International Conference on Learning Representations (ICLR),
+SIAM Journal on Mathematics of Data Science (SIMODS), 
 International Conference on Machine Learning and Applications (ICMLA),
 Neural  Processing Letter (NEPL), 
 Journal of Artificial Intelligence Research (JAIR), Journal of Scientific Computing (JOSC)</p>
@@ -43,7 +44,7 @@ Journal of Artificial Intelligence Research (JAIR), Journal of Scientific Comput
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-11 10:42:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
