--- a/research_by_year.html
+++ b/research_by_year.html
@@ -26,23 +26,22 @@
 </div>
 <h2>Sorted by Year</h2>
 <ul>
-<li><p>Learning the Quantile Function without Quantile Crossing: Regret Analysis and Forecasting Applications.<br /> 
-<b>Y. Park</b> et al.<br />
-In preparation.</p>
+<li><p>Learning the Quantile Function without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
+<b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
+To appear in <a href="https://sites.google.com/berkeley.edu/dfuq21/">Distribution-free Uncertainty Quantification</a> ICML workshop, 2021.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2102.06828">Attention-based Domain Adaption for Time Series Forecasting.</a><br /> 
+<li><p><a href="https://arxiv.org/abs/2102.06828">Domain Adaptation for Time Series Forecasting via Attention Sharing.</a><br /> 
 X. Jin, <b>Y. Park</b>, D, Robinson, Y. Wang.<br />
 Under review. 
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduction in Training Forecasting Models with Subgroup Sampling</a><br />
+<li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduced Training with Stratified Sampling for Forecasting Models.</a><br />
 Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
-Under review. 
-</p>
+To appear in <i>International Conference on Machine Learning (ICML)</i>, 2021.</p>
 </li>
 </ul>
 <ul>
@@ -108,7 +107,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-05 08:51:03 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
