--- a/coursework.html
+++ b/coursework.html
@@ -36,7 +36,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-05 08:51:03 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
