--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
 <p><a href="ypark_cv.pdf">CV/Resume.</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-05 08:51:03 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
