--- a/research_by_year.html
+++ b/research_by_year.html
@@ -14,7 +14,6 @@
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research_by_year.html" class="current">Research</a></div>
-<div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
@@ -102,12 +101,12 @@ H. Maei and <b>Y. Park</b>,
 </li>
 <li><p>Hypercontractivity, Maximal Correlation, and Non-cooperative Simulation. [<a href="papers/slide_measure_correlation.pdf">Slides</a>, <a href="papers/report_measure_correlation.pdf">Report</a>]</p>
 </li>
-<li><p>Successive Lossy Compression for Laplacian Source. [<a href="papers/slide_lossycompression.pdf">Slides</a>, <a href="papers/report_lossycompression.pdf">Report</a>]</p>
+<li><p>Successive Lossy Compression for Laplacian Source. [<a href="papers/slide_lossycompression.pdf">Slides</a>, <a href="papers/report_lossycompression.pdf">Report</a>, <a href="acknowledgement_lossy.html">Acknowledgement</a>]</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-09 14:30:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
