--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <div class="menu-category">Youngsuk Park</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research_by_year.html">Research</a></div>
-<div class="menu-item"><a href="research_by_topic.html">Research&nbsp;(by&nbsp;Topic)</a></div>
 <div class="menu-item"><a href="coursework.html">Coursework</a></div>
 <div class="menu-item"><a href="resume.html">CV/Resume</a></div>
 <div class="menu-item"><a href="internship.html">Internship&nbsp;Opp.</a></div>
@@ -33,8 +32,9 @@ Ph.D. <a href="http://ee.stanford.edu/">Department of Electrical Engineering</a>
 </p>
 </td></tr></table>
 <h2>Contact</h2>
-<p>Office: 2100 University Ave, East Palo Alto, CA 94303<br />
-Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or <a href="mailto:pyoungsu@amazon.com">pyoungsu@amazon.com</a><br />
+<p>Office: 2795 Augustine Dr, Santa Clara, CA 95054<br />
+Professional email: <a href="mailto:pyoungsu@amazon.com">pyoungsu@amazon.com</a><br />
+Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a><br />
 <a href="https://www.linkedin.com/in/y-park/">Linkedin Profile</a>
 </p>
 <h2>News</h2>
@@ -46,21 +46,17 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 <div class="blockcontent">
 <p>July. 2021. The paper on variance reduced SGD with stratified sampling appears in ICML 2021. </p>
 </div></div>
-<div class="infoblock">
-<div class="blockcontent">
-<p>May. 2021. The paper on domain adaptation for time series forecasting have been uploaded to ArXiv.</p>
-</div></div>
 <h2>Research Interests</h2>
 <ul>
+<li><p>Time Series Forecasting</p>
+</li>
+<li><p>Explainable and Causal AI</p>
+</li>
 <li><p>Machine Learning</p>
 </li>
 <li><p>Optimization</p>
 </li>
-<li><p>Time Series Forecasting</p>
-</li>
-<li><p>Reinforcement Learning and Control</p>
-</li>
-<li><p>Causality, Explainability</p>
+<li><p>Reinforcement Learning</p>
 </li>
 </ul>
 <h2>Experiences</h2>
@@ -98,7 +94,7 @@ Email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> or
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-09 08:54:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-09 14:30:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
