update the homepage

--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@ Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.e
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>July. 2021. The paper on learning quantile function without quantile crossing appears <a href="https://sites.google.com/berkeley.edu/dfuq21/">Distribution-free Uncertainty Quantification</a> ICML workshop. </p>
+<p>Oct. 2021. Three papers on uncertainty quantification, quantile regressions, and robust forecasting are submitted to AISTATS. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>July. 2021. The paper on variance reduced SGD with stratified sampling appears in ICML 2021. </p>
+<p>Oct. 2021. The papers on optimal transport for time series alignment is submitted to NeurIPS workshop. </p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Sept. 2021. The paper on domain adaptation for time series forecasting is submitted to AAAI 2021. </p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -94,7 +98,7 @@ Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.e
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-09 14:40:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
