--- a/internship.html
+++ b/internship.html
@@ -24,30 +24,30 @@
 <h1>Internship Opportunities</h1>
 </div>
 <h2>About internship</h2>
-<p>ML and Forecast science team at AWS AI Labs is looking for motivated research interns for summer 2021 (and autumn). The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time series analysis methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences or journals at the end of internship.</p>
+<p>ML and Forecast science team at AWS AI Labs is looking for motivated research interns for summer 2022. The internship is minimum 12-14 weeks and requires PhD candidacy in relevant areas. The main goal of this internship is to develop scalable and reliable time series analysis methods, reflecting various empirical or theoretical machine learning topics, along with some publication artifacts in venues of top-tier conferences or journals at the end of internship.</p>
 <h2>About ML and Forecast Science team in AWS AI Labs</h2>
-<p>Regarding to our team, please refer to our recent work in <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>, and <a href="https://aws.amazon.com/forecast/">AWS AI Forecast</a>.</p>
+<p>Regarding to our team, please refer to our recent work in <a href="https://github.com/awslabs/gluon-ts/blob/master/REFERENCES.md">selected papers</a>.</p>
 <h2>Ideal candidates</h2>
 <p>have a strong background in one or more of the following machine learning areas, but not limited to,</p>
 <ul>
-<li><p>Seq2Seq deep learning models (RNN, Transformer)</p>
+<li><p>explainable AI, causal inference</p>
 </li>
-<li><p>generative model (GAN, VAE, normalizing flow)</p>
+<li><p>Seq2Seq deep learning models (Transformer, GPT-3)</p>
 </li>
-<li><p>reinforcement learning (off-policy), robust optimization</p>
+<li><p>robust optimization, domain adaptation, fairness, distrbution shift or Out-of-Distribution (OOD)</p>
 </li>
-<li><p>explainable AI, causal inference, distrbution shift, fairness </p>
-</li>
-<li><p>autoML (meta learning, transfer learning, domain adaptation)</p>
+<li><p>off-policy for reinforcement learning</p>
 </li>
 </ul>
 <p>and preferably have publication records in
 in top-tier ML/AI conferences, e.g., ICML, NeurIPS, ICLR, AISTATS, KDD</p>
 <h2>Applications</h2>
-<p>If you are interested, feel free to send <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> an email attached with your C.V. and short introduction</p>
+<p>If you are interested, feel free to send <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.edu</a> an email attached with your C.V. and short introduction.</p>
+<h1>Misc.</h1>
+<p>If you are also interested in the areas of personalization, recommendation systems, time series anomaly, feel free to contact so that I can forward to the proper teams.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-09 14:40:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
