--- a/research_by_year.html
+++ b/research_by_year.html
@@ -25,9 +25,39 @@
 </div>
 <h2>Sorted by Year</h2>
 <ul>
+<li><p>Causal Discovery via Time Varying Graphical Lasso..<br />
+<b>Y. Park</b> et al.<br />
+In preparation.</p>
+</li>
+</ul>
+<ul>
+<li><p>Testing Causality of High-Dimensional Gaussians.<br />
+<b>Y. Park</b> et al.<br />
+In preparation.</p>
+</li>
+</ul>
+<ul>
+<li><p>Multivariate Quantile Functions for Forecasting.<br />
+<b>Y. Park</b> et al.<br />
+Under review.</p>
+</li>
+</ul>
+<ul>
+<li><p>Robust Probabilistic Time Series Forecasting.<br />
+T. Yoon, <b>Y. Park</b>, E. Ryu, Y. Wang.<br />
+Under review.</p>
+</li>
+</ul>
+<ul>
+<li><p>Temporal-consistent Optimal Transport for TimeSeries Alignment.<br />
+A. Jambulapati, H. Hasson, <b>Y. Park</b>, Y. Wang.<br />
+Under review. </p>
+</li>
+</ul>
+<ul>
 <li><p>Learning the Quantile Function without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
 <b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
-To appear in <a href="https://sites.google.com/berkeley.edu/dfuq21/">Distribution-free Uncertainty Quantification</a> ICML workshop, 2021.</p>
+Under review, [<a href="https://www.amazon.science/publications/learning-quantile-function-without-quantile-crossing-for-distribution-free-time-series-forecasting">Workshop version for ICML DFUQ</a>]<br /></p>
 </li>
 </ul>
 <ul>
@@ -40,7 +70,7 @@ Under review.
 <ul>
 <li><p><a href="https://arxiv.org/abs/2103.02062">Variance Reduced Training with Stratified Sampling for Forecasting Models.</a><br />
 Y. Lu, <b>Y. Park</b>, L. Cheng, Y. Wang, D. Foster.<br />
-To appear in <i>International Conference on Machine Learning (ICML)</i>, 2021.</p>
+<i>Proceedings of International Conference on Machine Learning</i> (ICML), 2021.<br /></p>
 </li>
 </ul>
 <ul>
@@ -106,7 +136,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-09 14:40:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
