--- a/research_by_year.html
+++ b/research_by_year.html
@@ -37,13 +37,13 @@ Under review.</p>
 </li>
 </ul>
 <ul>
-<li><p>Temporal-consistent Optimal Transport for TimeSeries Alignment.<br />
+<li><p>Temporal-consistent Optimal Transport for Time Series Alignment.<br />
 A. Jambulapati, H. Hasson, <b>Y. Park</b>, Y. Wang.<br />
 Under review. </p>
 </li>
 </ul>
 <ul>
-<li><p>Learning the Quantile Function without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
+<li><p>Learning the Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
 <b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
 Under review, [<a href="https://www.amazon.science/publications/learning-quantile-function-without-quantile-crossing-for-distribution-free-time-series-forecasting">Workshop version for ICML DFUQ</a>]<br /></p>
 </li>
@@ -124,7 +124,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:54:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-03 04:57:15 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
