--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@ Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.e
 <h2>News</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Oct. 2021. Three papers on uncertainty quantification, quantile regressions, and robust forecasting are submitted to AISTATS. </p>
+<p>Jan. 2022. Mutivariate Quantile Function Forecaster was selcted as an <b>oral presentation, 2.6% of all submissions</b>. </p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Oct. 2021. The papers on optimal transport for time series alignment is submitted to NeurIPS workshop. </p>
-</div></div>
-<div class="infoblock">
-<div class="blockcontent">
-<p>Sept. 2021. The paper on domain adaptation for time series forecasting is submitted to AAAI 2021. </p>
+<p>Jan. 2022. All three papers submitted to AISTATS on uncertainty quantification, quantile regressions, and robust forecasting got accepted. </p>
 </div></div>
 <h2>Research Interests</h2>
 <ul>
@@ -98,7 +94,7 @@ Personal email: <a href="mailto:youngsuk@cs.stanford.edu">youngsuk@cs.stanford.e
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:51:19 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:26:10 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
