--- a/research_by_year.html
+++ b/research_by_year.html
@@ -25,27 +25,15 @@
 </div>
 <h2>Sorted by Year</h2>
 <ul>
-<li><p>Multivariate Quantile Functions for Forecasting.<br />
-<b>Y. Park</b> et al.<br />
-Under review.</p>
-</li>
-</ul>
-<ul>
-<li><p>Robust Probabilistic Time Series Forecasting.<br />
-T. Yoon, <b>Y. Park</b>, E. Ryu, Y. Wang.<br />
-Under review.</p>
-</li>
-</ul>
-<ul>
-<li><p>Temporal-consistent Optimal Transport for Time Series Alignment.<br />
-A. Jambulapati, H. Hasson, <b>Y. Park</b>, Y. Wang.<br />
+<li><p>Testing Causality of High-Dimensional Gaussians.<br />
+
 Under review. </p>
 </li>
 </ul>
 <ul>
-<li><p>Learning the Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.<br /> 
-<b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
-Under review, [<a href="https://www.amazon.science/publications/learning-quantile-function-without-quantile-crossing-for-distribution-free-time-series-forecasting">Workshop version for ICML DFUQ</a>]<br /></p>
+<li><p>Temporal-consistent Optimal Transport for Time Series Alignment.<br />
+
+Under review. </p>
 </li>
 </ul>
 <ul>
@@ -53,6 +41,25 @@ Under review, [<a href="https://www.amazon.science/publications/learning-quantil
 X. Jin, <b>Y. Park</b>, D, Robinson, Y. Wang.<br />
 Under review. 
 </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2111.06581">Learning the Quantile Functions without Quantile Crossing for Distribution-free Time Series Forecasting.</a><br /> 
+<b>Y. Park</b>, D. Robinson, Y. Wang, J. Gasthaus.<br />
+To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
+</li>
+</ul>
+<ul>
+<li><p>Multivariate Quantile Functions for Forecasting.<br />
+K. Kan, F. Aubet, T. Januschowski, <b>Y. Park</b>, K. Benidis, J. Gasthaus.<br />
+To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022. <br />
+<b>Selected as an oral, 2.6% of all submissions.</b></p>
+</li>
+</ul>
+<ul>
+<li><p>Robust Probabilistic Time Series Forecasting.<br />
+T. Yoon, <b>Y. Park</b>, E. Ryu, Y. Wang.<br />
+To appear in <i>International Conference on Artificial Intelligence and Statistics (AISTATS)</i>, 2022.</p>
 </li>
 </ul>
 <ul>
@@ -124,7 +131,7 @@ H. Maei and <b>Y. Park</b>,
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-03 04:57:15 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-18 11:26:10 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
